--- a/INDEX.html
+++ b/INDEX.html
@@ -25,7 +25,7 @@
     
     <h1>Lab 4 Bok Bibliotek</h1>
     
-    <p>Lägg till Bok</p>
+    <p>Sök Bok:</p>
     <div id="plus" class="laggtill"></div>
     Titel: <input id="lab1" type="text" value="titel"></input>
     Författare: <input id="lab2" type="text" value="namn"></input>
