utv mapp uppdaterad med loggin funktion

--- a/utv/test.html
+++ b/utv/test.html
@@ -9,8 +9,13 @@
 </head>
 <body>
   <div class="container">
-    
+    <button id="btnKeyGen" type="button" name="button">Make key</button>
+    <button id="btnLoggIn"type="button" name="button">Logga in</button>
+    <input id="userName" type="text" name="" value="">
+    <input id="userPassword" type="password" name="" value="">
   </div>
+
+
 
 </body>
 </html>
