--- a/utv/test.html
+++ b/utv/test.html
@@ -4,17 +4,63 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
+
     <script src="test.js" type="text/javascript"></script>
 </head>
 <body>
   <div class="container">
-    <button id="btnKeyGen" type="button" name="button">Make key</button>
-    <button id="btnLoggIn"type="button" name="button">Logga in</button>
-    <input id="userName" type="text" name="" value="">
-    <input id="userPassword" type="password" name="" value="">
-  </div>
 
+    <header>
+      <nav>
+        <div class="navBar" name="test">Home</div>
+        <div class="navBar">About</div>
+        <div class="navBar">Contact</div>
+        <div class="navBar">User</div>
+
+      </nav>
+      <div class="container">
+        <div class="header-right">
+          <label for="userName">Användare</label>
+          <input id="userName" type="text" name="" value="">
+          <label for="userPassword">Lösenord</label>
+          <input id="userPassword" type="password" name="" value="">
+          <button id="btnLoggIn"type="button" name="button">Logga in</button>
+
+        </div>
+      </div>
+    </header>
+    <aside>aside</aside>
+    <footer>footer</footer>
+
+
+    <article class="article">
+      <div class="container">
+        artikel 1
+      </div>
+    </article>
+    <article class="article">
+      <div class="container">
+        Artikel 2
+      </div>
+    </article>
+    <article class="article">
+      <div class="container">
+        artikel 3
+      </div>
+    </article>
+    <article class="article">UserLogin
+      <div class="container">
+        <div id="boxlogin">
+          <button id="btnKeyGen" type="button" name="button">Make key</button>
+          <button id="btnNewUser" type="button" name="button">Ny Användare</button>
+
+        </div>
+
+      </div>
+    </article>
+
+</div>
 
 
 </body>
