updaterad inloggnings funktion

--- a/utv/test.html
+++ b/utv/test.html
@@ -12,20 +12,17 @@
   <div class="container">
 
     <header>
-      <nav>
-        <div class="navBar" name="test">Home</div>
-        <div class="navBar">About</div>
-        <div class="navBar">Contact</div>
-        <div class="navBar">User</div>
-
-      </nav>
       <div class="container">
+        <nav>
+          <div class="navBar" name="test">Home</div>
+          <div class="navBar">About</div>
+          <div class="navBar">Contact</div>
+          <div class="navBar">User Liberary</div>
+          <div class="navBar">User</div>
+
+        </nav>
         <div class="header-right">
-          <label for="userName">Användare</label>
-          <input id="userName" type="text" name="" value="">
-          <label for="userPassword">Lösenord</label>
-          <input id="userPassword" type="password" name="" value="">
-          <button id="btnLoggIn"type="button" name="button">Logga in</button>
+
 
         </div>
       </div>
@@ -49,12 +46,25 @@
         artikel 3
       </div>
     </article>
+    <article class="article userLib">
+
+
+    </article>
     <article class="article">UserLogin
+      <button id="btnTest" type="button" name="button">Testknapp för utv</button>
       <div class="container">
         <div id="boxlogin">
+          <p>
+            <label for="userName">Användare</label>
+            <input id="userName" type="text" name="" value="">
+          </p><br>
+          <p>
+            <label for="userPassword">Lösenord</label>
+            <input id="userPassword" type="password" name="" value="">
+          </p><br>
+          <button id="btnLoggIn"type="button" name="button">Logga in</button>
           <button id="btnKeyGen" type="button" name="button">Make key</button>
           <button id="btnNewUser" type="button" name="button">Ny Användare</button>
-
         </div>
 
       </div>
