--- a/utv/test.html
+++ b/utv/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
-
+    <script src="https://use.fontawesome.com/4e877af7f8.js"></script>
     <script src="test.js" type="text/javascript"></script>
 </head>
 <body>
@@ -13,27 +13,44 @@
 
     <header>
       <div class="container">
-        <nav>
-          <div class="navBar" name="test">Home</div>
-          <div class="navBar">About</div>
-          <div class="navBar">Contact</div>
-          <div class="navBar">User Liberary</div>
-          <div class="navBar">User</div>
-
-        </nav>
         <div class="header-right">
+          <i class="fa fa-user-circle fa-2x" style="color:rgb(142, 0, 0)" aria-hidden="true"></i>
 
-
+          <p id="headUserInfo">Ej Inloggad</p>
+          <ul id="profileMenu">
+            <li id="loggOut">Logga ut</li>
+          </ul>
         </div>
       </div>
     </header>
+    <nav>
+      <div class="navBar navBarSelected" name="test">Home</div>
+      <div class="navBar">About</div>
+      <div class="navBar">Contact</div>
+      <div class="navBar">User Liberary</div>
+      <div class="navBar">User</div>
+
+    </nav>
+
     <aside>aside</aside>
     <footer>footer</footer>
 
 
     <article class="article">
-      <div class="container">
-        artikel 1
+      <div class="container-flex">
+
+        <ul>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+          <li class="book">Första boken</li>
+        </ul>
+
+
       </div>
     </article>
     <article class="article">
