update search functions

--- a/utv/test.html
+++ b/utv/test.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://use.fontawesome.com/4e877af7f8.js"></script>
     <script src="../js/test.js" type="text/javascript"></script>
-    <link href="https://fonts.googleapis.com/css?family=Average|Freckle+Face" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arya" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -19,7 +19,7 @@
 
           <p id="headUserInfo">Ej Inloggad</p>
           <ul id="profileMenu">
-            <li id="loggOut">Logga ut</li>
+            <li id="loggOut">x</li>
           </ul>
         </div>
       </div>
@@ -41,8 +41,8 @@
       <div class="container-flex">
         <div class="searchParameters">
           <div>
-            <label for="searchAutorTextInput">Titel</label>
-            <input id="searchAutorTextInput" type="text" placeholder="Titel och id">
+            <input id="searchTitelTextInput" type="text" placeholder="Titel eller ID" name="" value="">
+            <input id="searchAutorTextInput" type="text" placeholder="Författare">
             <button id="btnSearchGoogle" type="button" name="button">Sök</button>
           </div>
         </div>
