update of login function

--- a/utv/test.html
+++ b/utv/test.html
@@ -17,16 +17,26 @@
 
         <a href="#close"><button type="button">X</button></a>
         <p>
-          <label for="userName">Användar ID</label>
-          <input id="userName" type="text" name="" value=""><br>
-          <label for="userPassword">Lösenord</label>
-          <input id="userPassword" type="password" name="" value="">
+          <label>Användar ID<input id="userName" type="text"></label><br>
+          <label>Lösenord<input id="userPassword" type="password" name="" value=""></label><br>
+          <label>Förnamn<input id="firstName" type="text" name="" value=""></label><br>
+          <label>Efternamn<input id="lastName" type="text" name="" value=""></label><br>
+          <label>Mejl<input id="userEmail" type="text" name="" value=""></label><br>
+            <label>Key<input id="userKey" type="text" name="" value=""></label>
+
+
+
+
+
+
         </p>
 
         <span>
+
           <button id="btnLoggIn"type="button" name="button">Logga in</button>
           <button id="btnKeyGen" type="button" name="button">Skapa Nyckel</button>
           <button id="btnNewUser" type="button" name="button">Ny Användare</button>
+
         </span>
 
     </div>
