--- a/utv/test.html
+++ b/utv/test.html
@@ -22,22 +22,16 @@
           <label>Förnamn<input id="firstName" type="text" name="" value=""></label><br>
           <label>Efternamn<input id="lastName" type="text" name="" value=""></label><br>
           <label>Mejl<input id="userEmail" type="text" name="" value=""></label><br>
-            <label>Key<input id="userKey" type="text" name="" value=""></label>
-
-
-
-
-
-
+          <label>Key<input id="userKey" type="text" name="" value=""></label>
+          <span class="pop-up-Text"></span>
         </p>
 
         <span>
-
           <button id="btnLoggIn"type="button" name="button">Logga in</button>
           <button id="btnKeyGen" type="button" name="button">Skapa Nyckel</button>
           <button id="btnNewUser" type="button" name="button">Ny Användare</button>
-
         </span>
+        <button id="test2" type="button" name="button">click me</button>
 
     </div>
   </div>
