added makeown book function

--- a/utv/test.html
+++ b/utv/test.html
@@ -96,7 +96,24 @@
 
             </ul>
         </div>
+        <div class="container-flex">
+            <ul>
+              <li class="books">
+                <button id="btnMakeOwnBook" type="button" name="button">click me</button>
+                <label><input id="myBookid" type="text" placeholder="myBookid"></label>
+                <label><input id="myBookTitle" type="text" placeholder="myBookTitle"></label>
+                <label><input id="myBookAuthor" type="text" placeholder="myBookAuthor"></label>
+                <label><input id="myBookLink" type="text" placeholder="myBookLink"></label>
+                <label><input id="myBoookDescription" type="text" placeholder="myBoookDescription"></label>
+                <label><input id="myBookSearchSnippet" type="text" placeholder="myBookSearchSnippet"></label>
+                <label><input id="myBookImgSrc" type="text" placeholder="myBookImgSrc"></label>
+                <label><input id="myBookServer" type="text" placeholder="myBookServer"></label>
 
+
+
+              </li>
+            </ul>
+        </div>
 
 
     </article>
