new feature- update userdata for loggdin user

--- a/utv/test.html
+++ b/utv/test.html
@@ -67,7 +67,7 @@
     </aside>
     <footer>footer</footer>
 
- 
+
     <article class="article">
 
       <div class="container-flex">
@@ -137,11 +137,23 @@
             </ul>
         </div>
 
-
+        <button id="btnTest" type="button" name="button">Testknapp för utv</button>
     </article>
-    <article class="article">UserLogin
-      <button id="btnTest" type="button" name="button">Testknapp för utv</button>
-      <div class="container">
+    <article class="article">
+      <div class="container-none">
+        <div class="userSettings">
+          <label>Användar ID<input id="settingUserName" type="text"></label>
+          <label>Lösenord<input id="settingUserPassword" type="password" name="" value=""></label>
+          <label>Förnamn<input id="settingFirstName" type="text" name="" value=""></label>
+          <label>Efternamn<input id="settingLastName" type="text" name="" value=""></label>
+          <label>Mejl<input id="settingUserEmail" type="text" name="" value=""></label><br>
+          <label>Unikt ID<input id="settingId" type="text" name="" value="" readonly="readonly"></label>
+          <label>Key<input id="settingUserKey" type="text" name="" value="" readonly="readonly"></label>
+          <label>Time<input id="settingUpdated" type="text" name="" value="" readonly="readonly"></label>
+
+          <button id="btnsettingUpdated" type="button" name="button">Uppdatera!</button>
+        </div>
+
 
       </div>
     </article>
