--- a/utv/test.html
+++ b/utv/test.html
@@ -142,6 +142,7 @@
         </div>
 
         <button id="btnTest" type="button" name="button">Testknapp för utv</button>
+        <button id="btnTest2" type="button" name="button">Testknapp för utv2</button>
     </article>
     <article class="article">
       <div class="container-none">
