--- a/utv/test.html
+++ b/utv/test.html
@@ -72,6 +72,9 @@
       </nav>
     </aside>
     <footer>
+      <div class="report" style="color:white">
+        <p><strong>Statestik</strong><br>Misslyckade requests: <span id="failCounter">0</span></p>
+      </div>
 
       </footer>
 
