fixed loggout functions

--- a/utv/test.html
+++ b/utv/test.html
@@ -136,8 +136,10 @@
             </br>Ourlibrary.com
             </br>EC Utbildning, Mölndalsvägen 81
             </br>412 63 Götborg</b></p>
+
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrZbY0e4a0bMbZTCcjQuT5Xo1eJOK4c74&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrZbY0e4a0bMbZTCcjQuT5Xo1eJOK4c74">
+
     </script>
 
 
@@ -155,9 +157,9 @@
         <div class="container-flex">
             <ul>
               <li class="books">
-                <button id="btnMakeOwnBook" type="button" name="button">click me</button>
                 <label><input id="myBookTitle" type="text" placeholder="Titel"></label>
                 <label><input id="myBookAuthor" type="text" placeholder="Författare"></label>
+                <button id="btnMakeOwnBook" type="button" name="button">Lägg till Bok</button>
 
                 <!--
                 <label><input id="myBookid" type="text" placeholder="myBookid"></label>
@@ -173,8 +175,8 @@
             </ul>
         </div>
 
-        <button id="btnTest" type="button" name="button">Testknapp för utv</button>
-        <button id="btnTest2" type="button" name="button">Testknapp för utv2</button>
+        <!--<button id="btnTest" type="button" name="button">Testknapp för utv</button>
+        <button id="btnTest2" type="button" name="button">Testknapp för utv2</button> -->
     </article>
     <article class="article">
       <div class="container-none">
