--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 
     <article class="article">
       <div class="container-flex">
-        <h3>Om detta bibliotek:</h3>
-          </br><p>Detta är vårat "imdb" för böcker som vi har gjort i samband med javascript2 kursen. Vi har byggt en sida med loginfunktion där användaren har ett eget personligt bibliotek med böcker som enbart den inloggade kan se samt lägga till och ta bort dem ut sitt bibliotek. Böckerna som användaren kan välja från är tagna från Googlebooks api som vi använt oss av. Vi har även en sök funktion där man kan söka på författare eller titel på boken, och man får fram en lista på 10 sökträffar från Googlebooks.</p>
+        <h2>Om detta bibliotek:</h2>
+          </br><p><b>Detta är vårat "imdb" för böcker som vi har gjort i samband med javascript2 kursen. Vi har byggt en sida med loginfunktion där användaren har ett eget personligt bibliotek med böcker som enbart den inloggade kan se samt lägga till och ta bort dem ut sitt bibliotek. Böckerna som användaren kan välja från är tagna från Googlebooks api som vi använt oss av. Vi har även en sök funktion där man kan söka på författare eller titel på boken, och man får fram en lista på 10 sökträffar från Googlebooks.</b></p>
+        <p id="text"><b>Johan Augustsson och Erik Ojeda Johansson, EC Utbildning Göteborg 2017</b></p>
       </div>
     </article>
 
